--- a/custom.css
+++ b/custom.css
@@ -18,7 +18,16 @@
   font-weight: 70%; 
 }
 
+.reveal npm install -g reveal-md
+
+.reveal table th,
+.reveal table td {
+  text-align: left;
+  padding: 0.2em 0.5em 0.2em 0.5em;
+  border-bottom: 0px solid; 
+}
+
 table, td, th, tr {
     border: 0px solid grey;
-    border-bottom: 0px solid; }
+    border-bottom: 0px solid; 
 }
