Update js version

--- a/lib/template/listing.html
+++ b/lib/template/listing.html
@@ -2,20 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Directory Listing</title>
-    <link rel="stylesheet" href="{{{base}}}/{{{themeUrl}}}" id="theme" />
-    <style type="text/css">
-      body {
-        margin: 1em;
-      }
-      a {
-        color: white;
-        display: block;
-      }
-    </style>
+    <title>{{pageTitle}}</title>
+    <link rel="stylesheet" href="{{{themeUrl}}}" id="theme" />
   </head>
 
   <body>
-    {{{listing}}}
+    <ul>
+      {{#files}}
+      <li>
+        <a href="{{filePath}}" title="{{title}}">
+          {{#title}}
+            {{.}} ({{filePath}})
+          {{/title}}
+          {{^title}}
+            {{filePath}}
+          {{/title}}
+        </a>
+      </li>
+      {{/files}}
+    </ul>
+
+    <p>
+      Last update: {{date}}
+    </p>
   </body>
 </html>
